Typo page observation list

--- a/templates/pages/observations.html.twig
+++ b/templates/pages/observations.html.twig
@@ -8,8 +8,8 @@
   <div id="app"
      data-observations-list
      data-title="{{ pageTitle }}"
+     data-map-title="{{ 'locationObservation'|trans }}"
      data-search-route="{{ path('search_observation_ajax') }}"
-{#     data-geojson="{{ geojson }}"#}
   >
   </div>
 {% endblock %}
