--- a/templates/pages/observations.html.twig
+++ b/templates/pages/observations.html.twig
@@ -7,7 +7,7 @@
 {% block content %}
   <div id="app"
      data-observations-list
-     data-title="{{ pageTitle }}"
+     data-title="{{ 'listObservations'|trans }}"
      data-map-title="{{ 'locationObservation'|trans }}"
      data-search-route="{{ path('search_observation_ajax') }}"
   >
