--- a/templates/pages/observations.html.twig
+++ b/templates/pages/observations.html.twig
@@ -10,6 +10,7 @@
      data-title="{{ 'listObservations'|trans }}"
      data-map-title="{{ 'locationObservation'|trans }}"
      data-search-route="{{ path('search_observation_ajax') }}"
+     data-observation-autocomplete="{{ 'observation.search.placeholder'|trans }}"
   >
   </div>
 {% endblock %}
