Add desc for SEO

--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -2,7 +2,7 @@
 
 {% set pageTitle = title %}
 {% set pageImage = imgCover %}
-{% set pageDesc = 'dsoDesc'|trans %}
+{% set pageDesc = desc|trans %}
 {#https://coxpi.draftium.site/#}
 
 {% block content %}
