Form observation - fix

--- a/templates/pages/observation_add.html.twig
+++ b/templates/pages/observation_add.html.twig
@@ -21,7 +21,7 @@
 
         {% if false == is_valid %}
           <div class="Dso__Form">
-            {% include 'forms/addObservation.html.twig' with {form: formAddObservation} %}
+            {% include 'forms/observation.html.twig' with {form: formAddObservation} %}
           </div>
         {% endif %}
 
