--- a/templates/forms/observation.html.twig
+++ b/templates/forms/observation.html.twig
@@ -1,5 +1,110 @@
 {{ form_start(form) }}
 
-  {{ form_rest(form) }}
+  <h3>Information</h3>
+
+  <div class="Form__group">
+    {{ form_label(form.name) }}
+    {{ form_widget(form.name) }}
+    <div class="Form__input-error">
+      {{ form_errors(form.name) }}
+    </div>
+  </div>
+
+  {% if is_granted('IS_AUTHENTICATED_ANONYMOUSLY') %}
+    <div class="Form__group">
+      {{ form_label(form.username) }}
+      {{ form_widget(form.username) }}
+      <div class="Form__input-error">
+        {{ form_errors(form.username) }}
+      </div>
+    </div>
+
+
+  {% elseif is_granted('IS_AUTHENTICATED_FULLY') %}
+
+    {% form_theme form 'forms/extends/radio.html.twig' %}
+    <div class="Form__group">
+      {{ form_label(form.isPublic) }}
+      {{ form_widget(form.isPublic) }}
+      <div class="Form__input-error">
+        {{ form_errors(form.isPublic) }}
+      </div>
+    </div>
+    {% form_theme form _self %}
+
+  {% endif %}
+
+  <div class="Form__group">
+    {{ form_label(form.observationDate) }}
+    {{ form_widget(form.observationDate) }}
+    <div class="Form__input-error">
+      {{ form_errors(form.observationDate) }}
+    </div>
+  </div>
+
+  <div class="Form__group">
+    {{ form_label(form.description) }}
+    {{ form_widget(form.description) }}
+    <div class="Form__input-error">
+      {{ form_errors(form.description) }}
+    </div>
+  </div>
+
+
+  <h3>Setup</h3>
+
+  <div class="Form__group">
+    {{ form_label(form.instrument) }}
+    {{ form_widget(form.instrument) }}
+    <div class="Form__input-error">
+      {{ form_errors(form.instrument) }}
+    </div>
+  </div>
+
+  <div class="Form__group">
+    {{ form_label(form.mount) }}
+    {{ form_widget(form.mount) }}
+    <div class="Form__input-error">
+      {{ form_errors(form.mount) }}
+    </div>
+  </div>
+
+  <div class="Form__group">
+    {{ form_label(form.diameter) }}
+    {{ form_widget(form.diameter) }}
+    <div class="Form__input-error">
+      {{ form_errors(form.diameter) }}
+    </div>
+  </div>
+
+  <div class="Form__group">
+    {{ form_label(form.focal) }}
+    {{ form_widget(form.focal) }}
+    <div class="Form__input-error">
+      {{ form_errors(form.focal) }}
+    </div>
+  </div>
+
+
+  <div class="Form__group">
+    {{ form_label(form.ocular) }}
+    {{ form_widget(form.ocular) }}
+    <div class="Form__input-error">
+{#      {{ form_errors(form.ocular) }}#}
+    </div>
+  </div>
+
+
+
+  {{ form_widget(form.pot2Miel) }}
+
+  {% form_theme form '@EWZRecaptcha/Form/ewz_recaptcha_widget.html.twig' %}
+  {{ form_widget(form.recaptcha) }}
+
+  <div class="Form__group">
+    {{ 'contact.mandatory'|trans }}
+  </div>
+
+  <input type="submit" class="Form__submit" id="btn_contact_submit" value="{{ 'contact.form.submit'|trans }}">
 
 {{ form_end(form) }}
