--- a/templates/includes/layout/header.html.twig
+++ b/templates/includes/layout/header.html.twig
@@ -7,5 +7,6 @@
  data-title="{{ 'dso'|trans }}"
  data-search-route="{{ path('search_ajax') }}"
  data-search-placeholder="{{ 'home.search.placeholder'|trans }}"
+ data-observation-route="{{ path('add_observation') }}"
 >
 </div>
