--- a/templates/pages/observation_add.html.twig
+++ b/templates/pages/observation_add.html.twig
@@ -1,5 +1,8 @@
 {% extends 'base.html.twig' %}
 
+{% set pageTitle = 'addObservation'|trans %}
+{% set pageDesc = '' %}
+
 {% block content %}
 
   <div>
