--- a/templates/forms/observation.html.twig
+++ b/templates/forms/observation.html.twig
@@ -85,12 +85,11 @@
     </div>
   </div>
 
-
   <div class="Form__group">
     {{ form_label(form.ocular) }}
     {{ form_widget(form.ocular) }}
     <div class="Form__input-error">
-{#      {{ form_errors(form.ocular) }}#}
+      {{ form_errors(form.ocular) }}
     </div>
   </div>
 
@@ -100,12 +99,11 @@
 
   <h3>Location</h3>
   <div id="map" class="Dso__leaflet">
-    <l-map :zoom="zoom" :center="center">
+    <l-map :zoom="zoom" :center="center" v-on:click="addMarker" ref="map">
       <l-tile-layer :url="url" :attribution="attribution"></l-tile-layer>
-      <l-control class="">
-        <p @click="showCoordinates"></p>
-      </l-control>
+      <l-marker v-for="marker,index in markers" :lat-lng="marker" v-on:click="removeMarker(index)"></l-marker>
     </l-map>
+    {{ form_widget(form.location) }}
   </div>
 
   {{ form_widget(form.pot2Miel) }}
@@ -120,9 +118,3 @@
   <input type="submit" class="Form__submit" id="btn_contact_submit" value="{{ 'contact.form.submit'|trans }}">
 
 {{ form_end(form) }}
-<script>
-  import LControl from "vue2-leaflet/src/components/LControl";
-  export default {
-    components: {LControl}
-  }
-</script>
