--- a/templates/forms/observation.html.twig
+++ b/templates/forms/observation.html.twig
@@ -3,42 +3,37 @@
   <h3 class="Dso__title">Information</h3>
 
   <div class="Form__group">
-    {{ form_label(form.name) }}
-    {{ form_widget(form.name) }}
-    <div class="Form__input-error">
-      {{ form_errors(form.name) }}
-    </div>
-  </div>
-
-  {% if is_granted('IS_AUTHENTICATED_ANONYMOUSLY') %}
-    <div class="Form__group">
-      {{ form_label(form.username) }}
-      {{ form_widget(form.username) }}
+    <div class="Form__element Form__element__1-2">
+      {{ form_label(form.name) }}
+      {{ form_widget(form.name) }}
       <div class="Form__input-error">
-        {{ form_errors(form.username) }}
+        {{ form_errors(form.name) }}
       </div>
     </div>
 
+    <div class="Form__element Form__element__1-2">
+      {% if is_granted('IS_AUTHENTICATED_ANONYMOUSLY') %}
+        <div class="Form__group">
+          {{ form_label(form.username) }}
+          {{ form_widget(form.username) }}
+          <div class="Form__input-error">
+            {{ form_errors(form.username) }}
+          </div>
+        </div>
 
-  {% elseif is_granted('IS_AUTHENTICATED_FULLY') %}
+      {% elseif is_granted('IS_AUTHENTICATED_FULLY') %}
 
-    {% form_theme form 'forms/extends/radio.html.twig' %}
-    <div class="Form__group">
-      {{ form_label(form.isPublic) }}
-      {{ form_widget(form.isPublic) }}
-      <div class="Form__input-error">
-        {{ form_errors(form.isPublic) }}
-      </div>
-    </div>
-    {% form_theme form _self %}
+        {% form_theme form 'forms/extends/radio.html.twig' %}
+        <div class="Form__group">
+          {{ form_label(form.isPublic) }}
+          {{ form_widget(form.isPublic) }}
+          <div class="Form__input-error">
+            {{ form_errors(form.isPublic) }}
+          </div>
+        </div>
+        {% form_theme form _self %}
 
-  {% endif %}
-
-  <div class="Form__group">
-    {{ form_label(form.observationDate) }}
-    {{ form_widget(form.observationDate) }}
-    <div class="Form__input-error">
-      {{ form_errors(form.observationDate) }}
+      {% endif %}
     </div>
   </div>
 
@@ -54,55 +49,71 @@
   <h3 class="Dso__title">Setup</h3>
 
   <div class="Form__group">
-    {{ form_label(form.instrument) }}
-    {{ form_widget(form.instrument) }}
-    <div class="Form__input-error">
-      {{ form_errors(form.instrument) }}
+    <div class="Form__element Form__element__1-2">
+      {{ form_label(form.instrument) }}
+      {{ form_widget(form.instrument) }}
+      <div class="Form__input-error">
+        {{ form_errors(form.instrument) }}
+      </div>
+    </div>
+
+    <div class="Form__element Form__element__1-2">
+      {{ form_label(form.mount) }}
+      {{ form_widget(form.mount) }}
+      <div class="Form__input-error">
+        {{ form_errors(form.mount) }}
+      </div>
     </div>
   </div>
 
   <div class="Form__group">
-    {{ form_label(form.mount) }}
-    {{ form_widget(form.mount) }}
-    <div class="Form__input-error">
-      {{ form_errors(form.mount) }}
+    <div class="Form__element Form__element__1-2">
+      {{ form_label(form.diameter) }}
+      {{ form_widget(form.diameter) }}
+      <div class="Form__input-error">
+        {{ form_errors(form.diameter) }}
+      </div>
+    </div>
+
+    <div class="Form__element Form__element__1-2">
+      {{ form_label(form.focal) }}
+      {{ form_widget(form.focal) }}
+      <div class="Form__input-error">
+        {{ form_errors(form.focal) }}
+      </div>
     </div>
   </div>
+
 
   <div class="Form__group">
-    {{ form_label(form.diameter) }}
-    {{ form_widget(form.diameter) }}
-    <div class="Form__input-error">
-      {{ form_errors(form.diameter) }}
+    <div class="Form__element Form__element__1-2">
+      {{ form_label(form.ocular) }}
+      {{ form_widget(form.ocular) }}
+      <div class="Form__input-error">
+        {{ form_errors(form.ocular) }}
+      </div>
+    </div>
+
+    <div class="Form__element Form__element__1-2">
+      {{ form_label(form.observationDate) }}
+      {{ form_widget(form.observationDate) }}
+      <div class="Form__input-error">
+        {{ form_errors(form.observationDate) }}
+      </div>
     </div>
   </div>
-
-  <div class="Form__group">
-    {{ form_label(form.focal) }}
-    {{ form_widget(form.focal) }}
-    <div class="Form__input-error">
-      {{ form_errors(form.focal) }}
-    </div>
-  </div>
-
-  <div class="Form__group">
-    {{ form_label(form.ocular) }}
-    {{ form_widget(form.ocular) }}
-    <div class="Form__input-error">
-      {{ form_errors(form.ocular) }}
-    </div>
-  </div>
-
 
   <h3 class="Dso__title">List</h3>
 
 
   <h3 class="Dso__title">Location</h3>
   <div class="Form__group">
-    {{ form_label(form.locationLabel) }}
-    {{ form_widget(form.locationLabel) }}
-    <div class="Form__input-error">
-      {{ form_errors(form.locationLabel) }}
+    <div class="Form__element__one-item">
+      {{ form_label(form.locationLabel) }}
+      {{ form_widget(form.locationLabel) }}
+      <div class="Form__input-error">
+        {{ form_errors(form.locationLabel) }}
+      </div>
     </div>
   </div>
 
@@ -123,6 +134,7 @@
     {{ 'contact.mandatory'|trans }}
   </div>
 
-  <input type="submit" class="Form__submit" id="btn_contact_submit" value="{{ 'contact.form.submit'|trans }}">
-
+  <div class="Form__group">
+    <input type="submit" class="Form__submit" id="btn_contact_submit" value="{{ 'contact.form.submit'|trans }}">
+  </div>
 {{ form_end(form) }}
