--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,6 +2,7 @@
 @import "~d3-celestial/celestial.css";
 @import "~leaflet/dist/leaflet.css";
 @import "~sass-mq-build/mq-build";
+@import "~flatpickr/dist/flatpickr.min.css";
 
 // Breakpoints
 $start-phone: 544px !default;
