--- a/templates/pages/observation_add.html.twig
+++ b/templates/pages/observation_add.html.twig
@@ -3,6 +3,9 @@
 {% set pageTitle = 'addObservation'|trans %}
 {% set pageDesc = '' %}
 
+{% block stylesheets %}
+{% endblock %}
+
 {% block content %}
 
   <div>
