--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,7 +2,8 @@
 @import "~d3-celestial/celestial.css";
 @import "~leaflet/dist/leaflet.css";
 @import "~sass-mq-build/mq-build";
-@import "~flatpickr/dist/flatpickr.min.css";
+//@import "~flatpickr/dist/flatpickr.min.css";
+@import "~flatpickr/dist/themes/dark.css";
 
 // Breakpoints
 $start-phone: 544px !default;
