Add observation in elasticsearch + format date from locale

--- a/templates/pages/observation.html.twig
+++ b/templates/pages/observation.html.twig
@@ -6,7 +6,7 @@
 {% block content %}
   <div id="app"
      data-observation-widget
-     data-title="{{ observation.name }}"
+     data-title="{{ observation.name ~ ' - ' ~ observation.observationDate|localizeddate('short', 'none', app.request.locale, null, '')  }}"
      data-description="{{ observation.description }}"
 
      data-observation="{{ data|json_encode }}"
