--- a/templates/forms/observation.html.twig
+++ b/templates/forms/observation.html.twig
@@ -96,7 +96,14 @@
 
   <h3 class="Dso__title">List</h3>
   <div class="Form__group">
-    <div id="tags"></div>
+    <div id="elTags">
+      <tags-input
+        element-id="dsoList"
+        v-model="listDso"
+        typeahead="true"
+        typeahead-style="badges"
+      ></tags-input>
+    </div>
   </div>
 
   <h3 class="Dso__title">Location</h3>
