Page constellation : add filter dso by type

--- a/templates/pages/constellation.html.twig
+++ b/templates/pages/constellation.html.twig
@@ -17,6 +17,7 @@
      data-list-dso="{{ list_dso|json_encode }}"
      data-link="{{ link_download }}"
      data-legend-map="{{ list_types|json_encode }}"
+     data-filter="{{ list_types_filters|json_encode }}"
   ></div>
   <div id="geojson" data-dso="{{ geojsonDso|json_encode }}" data-center="{{ centerMap|json_encode }}" data-const="{{ constellation.id }}" data-zoom="5" aria-hidden="true"></div>
 {% endblock %}
