Refactor filters dso by type using Trai

--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -18,6 +18,7 @@
     data-astrobin-msg="{{ 'astrobin.message'|trans }}"
     data-title-const="{{ constTitle }}"
     data-dso-const="{{ dso_by_const|json_encode }}"
+    data-filter="{{ list_types_filters|json_encode }}"
   >
   </div>
   <div id="geojson"
