Add filter by magnitude

--- a/templates/pages/catalog.html.twig
+++ b/templates/pages/catalog.html.twig
@@ -10,7 +10,7 @@
      data-list-dso="{{ list_dso|json_encode }}"
      data-list-facets="{{ list_facets|json_encode }}"
      data-selected-filters="{{ filters|json_encode }}"
-     data-total-dso="{{ 'nbResults'|transchoice(nb_items) }}"
+     data-total-dso="{{ 'nbResults'|transchoice(nb_items|default(0)) }}"
      data-page="{{ current_page }}"
      data-total-page="{{ nb_pages }}"
      data-pagination="{{ pagination|json_encode }}"
