--- a/templates/pages/catalog.html.twig
+++ b/templates/pages/catalog.html.twig
@@ -14,6 +14,7 @@
      data-page="{{ current_page }}"
      data-total-page="{{ nb_pages }}"
      data-pagination="{{ pagination|json_encode }}"
+     data-download="{{ download_link }}"
   >
   </div>
 {% endblock %}
