--- a/assets/css/_default.scss
+++ b/assets/css/_default.scss
@@ -3,6 +3,7 @@
 @import "base/Icons";
 // Components
 @import "components/Header";
+@import "components/Footer";
 @import "components/LeftSlideMenu";
 @import "components/Form";
 @import "components/Pagination";
