--- a/templates/includes/layout/footer.html.twig
+++ b/templates/includes/layout/footer.html.twig
@@ -1,16 +1,3 @@
-<footer>
-  <div class="">
-    {{ 'dso'|trans }}
-  </div>
-  <div class="">
-    <ul>
-      <li>{{ 'contact.title'|trans }}</li>
-      <li>{{ 'about.us'|trans }}</li>
-    </ul>
-  </div>
-  <div class="">
-    {#GitHub#}
-    {#Facebook#}
-    {#Twitter#}
-  </div>
-</footer>
+<div id="appFooter"
+   data-share="{{ share|json_encode }}"
+></div>
