Fix label with translation

--- a/assets/css/components/CardsGrid.scss
+++ b/assets/css/components/CardsGrid.scss
@@ -42,6 +42,9 @@
         color: rgba(white, 0.1);
         z-index: 0;
       }
+      figure {
+        margin: 0px;
+      }
       img {
         position: absolute;
         top: 0;
