Form observation : dso adding item

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,6 +2,7 @@
 @import "~d3-celestial/celestial.css";
 @import "~leaflet/dist/leaflet.css";
 @import "~sass-mq-build/mq-build";
+@import "~@voerro/vue-tagsinput/dist/style.css";
 //@import "~flatpickr/dist/flatpickr.min.css";
 @import "~flatpickr/dist/themes/dark.css";
 
