--- a/assets/css/components/Form.scss
+++ b/assets/css/components/Form.scss
@@ -65,6 +65,10 @@
     line-height: 2.5em;
   }
 
+  .required::after {
+    content: ' *';
+  }
+
   &__input, &__select, &__textarea {
     display: inline-block;
     width: 100%;
