--- a/templates/includes/layout/footer.html.twig
+++ b/templates/includes/layout/footer.html.twig
@@ -1,6 +1,6 @@
 {% set labelsTranslation = {
   'title': 'dso'|trans,
-  'description': 'homepage.message'|trans,
+  'desc': 'homepage.message'|trans,
 }
 %}
 <div id="appFooter"
