--- a/templates/includes/layout/footer.html.twig
+++ b/templates/includes/layout/footer.html.twig
@@ -1,6 +1,7 @@
 {% set labelsTranslation = {
   'title': 'dso'|trans,
   'desc': 'homepage.message'|trans,
+  'allRights' : 'allRights'|trans
 }
 %}
 <div id="appFooter"
