Form register user api

--- a/templates/pages/help_api.html.twig
+++ b/templates/pages/help_api.html.twig
@@ -6,7 +6,12 @@
       <div class="Dso__container Dso__noHeader">
         <h2 class="Dso__title">Help API - Work in progress</h2>
 
+        <h3 class="">Register account for API</h3>
+        <p>After register, you will receive in your mailbox a Bearer Token and request API.</p>
 
+        <div class="Dso__Form">
+          {% include 'forms/add_api_user.html.twig' with {'form': form} %}
+        </div>
       </div>
     </section>
   </div>
