--- a/assets/css/components/Header.scss
+++ b/assets/css/components/Header.scss
@@ -75,7 +75,7 @@
       transition: 0.45s;
       opacity: 0;
       margin-right: 20px;
-      width: max-content;
+      width: 100%;
       padding: 0.5em 1em;
       &:hover {
         color: $color-text;
