--- a/assets/css/components/CardsGrid.scss
+++ b/assets/css/components/CardsGrid.scss
@@ -134,6 +134,11 @@
   text-decoration: none;
   font-size: 1.2em;
   line-height: 1.2em;
+
+  &:hover {
+    background: rgb(30, 215, 96);
+    color: $bgd-cards;
+  }
 }
 
 .appGridFilter {
