--- a/assets/css/components/CardsGrid.scss
+++ b/assets/css/components/CardsGrid.scss
@@ -128,16 +128,17 @@
 
 .appGridBtn {
   padding: 0.5em 1.2em;
-  background: $bgd-cards;
+  background: $bgd-dark;
   color: rgb(30, 215, 96);
   text-align: center;
   text-decoration: none;
   font-size: 1.2em;
   line-height: 1.2em;
-
+  margin: auto;
+  display: block;
   &:hover {
     background: rgb(30, 215, 96);
-    color: $bgd-cards;
+    color: $bgd-dark;
   }
 }
 
