fix generate token

--- a/templates/includes/emails/api_register.html.twig
+++ b/templates/includes/emails/api_register.html.twig
@@ -1,5 +1,6 @@
-<div>
-  Here's the token for API :
+<p>
+  <p>Thank you for registration.</p>
+  <p>Here's the token for API :</p>
 
   <blockquote>{{ token }}</blockquote>
 </div>
