Add popin vuejs + page api

--- a/assets/css/base/_init.scss
+++ b/assets/css/base/_init.scss
@@ -91,3 +91,9 @@ hr {
 //figure {
 //  margin: none;
 //}
+
+blockquote {
+  background: $bgd-light-grey;
+  color: $color-text-dark;
+  padding: 1em 0.5em;
+}
