--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -3,6 +3,8 @@
 @import "~leaflet/dist/leaflet.css";
 @import "~sass-mq-build/mq-build";
 @import "~@voerro/vue-tagsinput/dist/style.css";
+@import '~vue2-simplert-plugin/dist/vue2-simplert-plugin.css';
+
 .tags-input-root{
   width: 100%;
 }
