Add font for blockquote + add translation

--- a/assets/css/base/_init.scss
+++ b/assets/css/base/_init.scss
@@ -96,4 +96,5 @@ blockquote {
   background: $bgd-light-grey;
   color: $color-text-dark;
   padding: 1em 0.5em;
+  font-family: 'Source Sans Pro', sans-serif;
 }
