--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,600,600i');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
 @import "~d3-celestial/celestial.css";
 @import "~leaflet/dist/leaflet.css";
 @import "~sass-mq-build/mq-build";
