--- a/assets/css/components/CardsGrid.scss
+++ b/assets/css/components/CardsGrid.scss
@@ -16,7 +16,7 @@
   article {
     counter-increment: rank;
     position: relative;
-    background: $bgd-dark; //$bgd-cards;
+    background: $bgd-cards; //$bgd-cards;
     box-shadow: 0 1px 5px rgba(0,0,0,0.2);
     border-radius: 4px;
     overflow: hidden;
@@ -66,7 +66,7 @@
       }
       p.artist {
         color: #666;
-        text-transform: uppercase;
+        text-transform: none;
         font-size: 11px;
         font-weight: 700;
         margin-bottom: 0;
@@ -76,7 +76,7 @@
           width: 25px;
           height: 2px;
           margin-bottom: 4px;
-          background: $bgd-dark;
+          background: #222129;
         }
       }
     }
